feat-adiciona-footer

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@
   .wrapper {
     margin-top: 8%;
     margin-left: 10%;
+    margin-bottom: 45%;
     display: flex;
     align-content: center;
     align-items: center;
