--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,12 +1,13 @@
 @media screen and (max-width: 767px) {
     .footer-content {
-        position: fixed;
+        position: absolute;
         font-family: podium;
         width: 100%;
         bottom: 0;
         display: flex;
         align-items: center;
         flex-direction: column;
+        margin-top: 40%;
         color: #ece8e1;
         height: 5.5em;
         background-color: #111111;
