--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   }
   
   .title-team-meet {
+    font-size: larger;
     margin-top: -4%;
     color: #373e41;
     font-family: DIN Next LT Arabic;
@@ -87,7 +88,7 @@
 
   .text-intro {
     margin-left: 4%;
-    font-size: small;
+    font-size: large;
     font-family: DIN Next LT Arabic;
     color: #58656b;
   }
