--- a/src/css/header.css
+++ b/src/css/header.css
@@ -10,3 +10,19 @@
         margin-bottom: 0;
     }
 }
+
+.header-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: podium;
+    color: #ece8e1;
+    height: 5em;
+    top: 0;
+    width: 100%;
+    background-color: #111111;
+}
+
+.header-content p {
+margin:0;
+}
