--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -12,14 +12,16 @@
     }
 }
 
-.footer-content {
-    font-family: podium;
-    width: 100%;
-    bottom: 0;
-    align-items: center;
-    flex-direction: column;
-    color: #ece8e1;
-    height: 11em;
-    position: fixed;
-    background-color: #111111;
+@media screen and (min-width: 767px) {
+    .footer-content {
+        font-family: podium;
+        width: 100%;
+        bottom: 0;
+        align-items: center;
+        flex-direction: column;
+        color: #ece8e1;
+        height: 11em;
+        position: fixed;
+        background-color: #111111;
+    }
 }
