--- a/src/css/header.css
+++ b/src/css/header.css
@@ -11,18 +11,21 @@
     }
 }
 
-.header-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: podium;
-    color: #ece8e1;
-    height: 5em;
-    top: 0;
-    width: 100%;
-    background-color: #111111;
-}
-
-.header-content p {
-margin:0;
+@media screen and (min-width: 767px) {
+    .header-content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: podium;
+        color: #ece8e1;
+        height: 5em;
+        top: 0;
+        width: 100%;
+        background-color: #111111;
+    }
+    
+    .header-content p {
+    margin:0;
+    }
+    
 }
